fix squares not being aligned correctly
display:table seems to move the container div away from the top left corner
Set the absolute position to top:0 left:0 to fix

--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ a {
 
 
 #container {
+    position: absolute;
+    top:0;
+    left:0;
     height:100vh;
     width:100vw;
     display:table;
